feat: add galoy service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
-    "useUnknownInCatchVariables": true
+    "useUnknownInCatchVariables": false
   }
 }
