--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "eslint-check": "eslint \"{src,test}/**/*.ts\"",
     "eslint-fix": "eslint \"{src,test}/**/*.ts\" --fix",
+    "test:unit": ". ./.envrc && LOGLEVEL=warn jest --config ./test/jest-unit.config.js --bail --verbose $TEST | yarn pino-pretty -c -l",
     "tsc-check": "tsc --noEmit -p tsconfig.d.json && tsc --noEmit --skipLibCheck",
     "build": "tsc -p tsconfig-build.json --skipLibCheck && tscpaths --silent -p tsconfig.json -s ./src -o ./lib"
   },
@@ -20,10 +21,13 @@
     "@opentelemetry/sdk-trace-base": "^1.12.0",
     "@opentelemetry/sdk-trace-node": "^1.12.0",
     "@opentelemetry/semantic-conventions": "^1.12.0",
+    "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
     "pino": "^8.11.0"
   },
   "devDependencies": {
+    "@jest/test-sequencer": "^29.5.0",
+    "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -34,6 +38,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "pino-pretty": "^10.0.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
