--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pino-pretty": "^10.0.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
 }
