--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@opentelemetry/sdk-trace-base": "^1.12.0",
     "@opentelemetry/sdk-trace-node": "^1.12.0",
     "@opentelemetry/semantic-conventions": "^1.12.0",
+    "axios": "^1.3.5",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
-    "pino": "^8.11.0"
+    "pino": "^8.11.0",
+    "toml": "^3.0.0"
   },
   "devDependencies": {
     "@jest/test-sequencer": "^29.5.0",
