--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "eslint-fix": "eslint \"{src,test}/**/*.ts\" --fix",
     "test:unit": ". ./.envrc && LOGLEVEL=warn jest --config ./test/jest-unit.config.js --bail --verbose $TEST | yarn pino-pretty -c -l",
     "tsc-check": "tsc --noEmit -p tsconfig.d.json && tsc --noEmit --skipLibCheck",
-    "build": "tsc -p tsconfig-build.json --skipLibCheck && tscpaths --silent -p tsconfig.json -s ./src -o ./lib"
+    "build": "tsc -p tsconfig-build.json --skipLibCheck && tscpaths --silent -p tsconfig.json -s ./src -o ./lib",
+    "watch-compile": "tsc --watch  --noEmit --skipLibCheck",
+    "db:status": "knex --knexfile ./src/config/database.ts migrate:status",
+    "db:create": "knex --knexfile ./src/config/database.ts migrate:make -x ts",
+    "db:migrate": "knex --knexfile ./src/config/database.ts migrate:latest",
+    "db:rollback": "knex --knexfile ./src/config/database.ts migrate:rollback",
+    "db:create:seed": "knex --knexfile ./src/config/database.ts seed:make -x ts",
+    "db:seed": "knex --knexfile ./src/config/database.ts seed:run"
   },
   "dependencies": {
     "@opentelemetry/api": "^1.4.1",
@@ -24,12 +31,15 @@
     "axios": "^1.3.5",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
+    "knex": "^2.4.2",
+    "pg": "^8.10.0",
     "pino": "^8.11.0",
     "toml": "^3.0.0"
   },
   "devDependencies": {
     "@jest/test-sequencer": "^29.5.0",
     "@types/jest": "^29.5.0",
+    "@types/mock-knex": "^0.4.5",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
@@ -40,6 +50,7 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
+    "mock-knex": "^0.4.12",
     "pino-pretty": "^10.0.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
