--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": ". ./.envrc && LOGLEVEL=warn jest --config ./test/jest-unit.config.js --bail --verbose $TEST | yarn pino-pretty -c -l",
     "tsc-check": "tsc --noEmit -p tsconfig.d.json && tsc --noEmit --skipLibCheck",
     "build": "tsc -p tsconfig-build.json --skipLibCheck && tscpaths --silent -p tsconfig.json -s ./src -o ./lib",
+    "start-dev": "tsnd --respawn --files -r tsconfig-paths/register -r src/services/tracing.ts src/servers/run.ts",
     "watch-compile": "tsc --watch  --noEmit --skipLibCheck",
     "db:status": "knex --knexfile ./src/config/database.ts migrate:status",
     "db:create": "knex --knexfile ./src/config/database.ts migrate:make -x ts",
@@ -29,18 +30,24 @@
     "@opentelemetry/sdk-trace-node": "^1.12.0",
     "@opentelemetry/semantic-conventions": "^1.12.0",
     "axios": "^1.3.5",
+    "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
+    "invoices": "^2.2.3",
     "knex": "^2.4.2",
+    "original-url": "^1.2.3",
     "pg": "^8.10.0",
     "pino": "^8.11.0",
     "toml": "^3.0.0"
   },
   "devDependencies": {
     "@jest/test-sequencer": "^29.5.0",
+    "@mockoon/cli": "^2.4.0",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/mock-knex": "^0.4.5",
     "@types/node": "^18.15.11",
+    "@types/original-url": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "@xascode/tscpaths": "^0.1.4",
@@ -55,6 +62,7 @@
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
 }
