--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-request": "^6.0.0",
     "invoices": "^2.2.3",
     "knex": "^2.4.2",
+    "node-cron": "^3.0.2",
     "original-url": "^1.2.3",
     "pg": "^8.10.0",
     "pino": "^8.11.0",
@@ -47,6 +48,7 @@
     "@types/jest": "^29.5.0",
     "@types/mock-knex": "^0.4.5",
     "@types/node": "^18.15.11",
+    "@types/node-cron": "^3.0.7",
     "@types/original-url": "^1.2.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
