--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "lnurl bill server",
   "license": "MIT",
+  "engines": {
+    "node": ">=18.10.0"
+  },
   "scripts": {
     "eslint-check": "eslint \"{src,test}/**/*.ts\"",
     "eslint-fix": "eslint \"{src,test}/**/*.ts\" --fix",
@@ -33,6 +36,7 @@
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-request": "^6.0.0",
+    "helmet": "^6.1.5",
     "invoices": "^2.2.3",
     "knex": "^2.4.2",
     "node-cron": "^3.0.2",
